--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
     
  </head>
  <body>
-  <audio>
-  <source src="srk.ogg" type="audio/ogg">
+  <audio controls>
   <source src="srk.mp3" type="audio/mpeg">
 Your browser does not support the audio element.
 </audio>
