--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
  <body>
   <audio controls loop>
   <source src="srk.mp3" type="audio/mpeg">
-Your browser does not support the audio element.
+
 </audio>
  	<header>
  		<nav>
@@ -395,7 +395,7 @@ Happy Birthday Bhai!
 
              <li>
               <figure>
-                <img src="img/anurag.jpg" alt="anurag"/>
+                <img src="img/anurag.jpg" alt="Anurag"/>
                 <figcaption><h3>Anurag</h3></figcaption>
               </figure>
             </li>
@@ -415,7 +415,7 @@ Happy Birthday Bhai!
 
             <li>
               <figure>
-                <img src="img/ashu.jpg" alt="ashu"/>
+                <img src="img/ashu.jpg" alt="Ashu"/>
                 <figcaption><h3>Ashu</h3></figcaption>
               </figure>
             </li>
@@ -610,7 +610,7 @@ Umr aapki ho suraj jaisi,
 Yaad rakhe jise hamesha duniya,
 Janmdin mein aap mehfil sajayein aap aisi,
 Shubh din ye aaye aapke jeevan mein hazaar baar,
-Aur hum aapko Janmdin Mubarak kehte rahein har baar.../p>
+Aur hum aapko Janmdin Mubarak kehte rahein har baar...</p>
                   
                 </figcaption>      <img src="img/Anurag.jpg" alt="Anurag"/>
               </figure>
@@ -666,7 +666,7 @@ God bless you....
 
                   </p>
                   
-                </figcaption>      <img src="img/Ashu.jpg" alt="Ashu"/>
+                </figcaption>      <img src="img/ashu.jpg" alt="Ashu"/>
               </figure>
             </li>
 
