--- a/index.html
+++ b/index.html
@@ -403,14 +403,12 @@ Happy Birthday Bhai!
               </figure>
             </li>
 
-
-             <li>
+ <li>
               <figure>
-                <img src="img/anurag.jpg" alt="Anurag"/>
+                <img src="img/anurag.jpg" alt="anurag"/>
                 <figcaption><h3>Anurag</h3></figcaption>
               </figure>
             </li>
-
 
 
              <li>
@@ -655,21 +653,33 @@ Have a happy, prosperous and peaceful life ahead....
 
 
 
- <li>
+
+
+            <li>
               <figure>
                 <figcaption>
                   <h3>Anurag</h3>
-                  <p>Phoolon ki sugandh se sugandhit ho jeevan tumhara,
+                  <p>
+
+
+Phoolon ki sugandh se sugandhit ho jeevan tumhara,
 Taron ki chamak se sammilit ho jeevan tumhara,
 Umr aapki ho suraj jaisi,
 Yaad rakhe jise hamesha duniya,
 Janmdin mein aap mehfil sajayein aap aisi,
 Shubh din ye aaye aapke jeevan mein hazaar baar,
-Aur hum aapko Janmdin Mubarak kehte rahein har baar...</p>
+Aur hum aapko Janmdin Mubarak kehte rahein har baar...
+
+
+
+                  </p>
                   
-                </figcaption>      <img src="img/Anurag.jpg" alt="Anurag"/>
+                </figcaption>      <img src="img/anurag.jpg" alt="Anurag"/>
               </figure>
             </li>
+
+
+
 
 
 
